[project]
name = "vaeda"
version = "0.0.30"
description = "A computational tool for annotating doublets in scRNAseq data."
readme = "README.md"
urls = { "repository" = "https://github.com/kostkalab/vaeda" }
authors = [
  {"name" = "Hannah Schriever", "email" = "hcs31@pitt.edu"}
]
license = "MIT"
requires-python = ">=3.8"
dependencies = [
    "kneed>=0.8.5",
    "leidenalg>=0.10.2",
    "scanpy[leiden]>1.3.3",
    "scikit-learn>=1.3.2",
    "tensorflow>=2.13.1",
    "tensorflow-probability[tf]>=0.21.0",
]

[dependency-groups]
dev = [
    "ipython>=8.12.3",
    "jupyterlab>=4.3.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
